tinyc/test/bad/void-as-bool-for.c
void v() {}

int main()
{
    for ( ; v(); )
        break;
    return 0;
}
